Feat: Added Register Endpoint to Register User